test/runtime/fail/expr/pkg_undefined_field.hy

// expect error: Undefined field `wefoij` on package `io`

import "io"

let a = io.wefoij()
